--- a/Articles/SFC/refs.bib
+++ b/Articles/SFC/refs.bib
@@ -8047,25 +8047,6 @@ Section: Review of Keynesian Economics},
 	file = {Full Text PDF:/home/gpetrini/Zotero/storage/TBQMP24J/Albanesi et al. - 2017 - Credit Growth and the Financial Crisis A New Narr.pdf:application/pdf}
 }
 
-@article{mian_consequences_2009,
-	title = {The {Consequences} of {Mortgage} {Credit} {Expansion}: {Evidence} from the {U}.{S}. {Mortgage} {Default} {Crisis}},
-	volume = {124},
-	issn = {0033-5533},
-	shorttitle = {The {Consequences} of {Mortgage} {Credit} {Expansion}},
-	url = {https://academic.oup.com/qje/article/124/4/1449/1917185},
-	doi = {10.1162/qjec.2009.124.4.1449},
-	abstract = {Abstract.  We conduct a within-county analysis using detailed ZIP code—level data to document new findings regarding the origins of the biggest financial crisis},
-
-	number = {4},
-	urldate = {2020-05-01},
-	journal = {The Quarterly Journal of Economics},
-	author = {Mian, Atif and Sufi, Amir},
-	month = nov,
-	year = {2009},
-	publisher = {Oxford Academic},
-	pages = {1449--1496},
-	file = {Snapshot:/home/gpetrini/Zotero/storage/UTUEIHN2/1917185.html:text/html}
-}
 
 @article{schularick_credit_2012,
 	title = {Credit {Booms} {Gone} {Bust}: {Monetary} {Policy}, {Leverage} {Cycles}, and {Financial} {Crises}, 1870-2008},
@@ -8229,5 +8210,37 @@ Section: Review of Keynesian Economics},
     eprint = {https://academic.oup.com/ej/article-pdf/42/165/42/27505220/ej0042.pdf},
 }
 
+
+@Article{Arestis_Bank_2014,
+  author       = {Arestis, Philip and González, Ana Rosa},
+  title	       = {Bank credit and the housing market in OECD
+                  countries},
+  year	       = 2014,
+  volume       = 36,
+  number       = 3,
+  month	       = {Apr},
+  pages	       = {467–490},
+  issn	       = {0160-3477},
+  doi	       = {10.2753/pke0160-3477360304},
+  url	       = {http://dx.doi.org/10.2753/PKE0160-3477360304},
+  journal      = {Journal of Post Keynesian Economics},
+  publisher    = {Informa UK Limited}
+}
+
+@Article{Jann_Concentration_2016,
+  author       = {Jann, Ben},
+  title	       = {Estimating Lorenz and Concentration Curves},
+  year	       = 2016,
+  volume       = 16,
+  number       = 4,
+  month	       = {Dec},
+  pages	       = {837–866},
+  issn	       = {1536-8734},
+  doi	       = {10.1177/1536867x1601600403},
+  url	       = {http://dx.doi.org/10.1177/1536867X1601600403},
+  journal      = {The Stata Journal: Promoting communications on
+                  statistics and Stata},
+  publisher    = {SAGE Publications}
+}
 
 
