--- a/Materias/2S2020/PED_CE342/Aulas/Panorama.org
+++ b/Materias/2S2020/PED_CE342/Aulas/Panorama.org
@@ -847,9 +847,108 @@ fig.savefig("./figs/EndividamentoFam.png", transparent = True, dpi = 300)
 
 *Dado:* Taxa de investimento público (%PIB)
 
+#+BEGIN_SRC ipython
+url = "https://www.tesourotransparente.gov.br/ckan/dataset/e048826b-b6b0-4d92-9204-fd218b1f25b3/resource/7a761d07-583a-4191-9f7d-db940f9f90bf/download/INVESTIMENTO-TOTAL---VALORES-PAGOS.csv"
+
+#+END_SRC
+
+#+RESULTS:
+:results:
+# Out [23]: 
+# output
+
+ParserErrorTraceback (most recent call last)
+<ipython-input-23-00bb250345c7> in <module>
+----> 1 df = pd.read_csv('https://www.tesourotransparente.gov.br/ckan/dataset/e048826b-b6b0-4d92-9204-fd218b1f25b3/resource/7a761d07-583a-4191-9f7d-db940f9f90bf/download/INVESTIMENTO-TOTAL---VALORES-PAGOS.csv')
+      2 df
+
+~/.local/lib/python3.8/site-packages/pandas/io/parsers.py in parser_f(filepath_or_buffer, sep, delimiter, header, names, index_col, usecols, squeeze, prefix, mangle_dupe_cols, dtype, engine, converters, true_values, false_values, skipinitialspace, skiprows, skipfooter, nrows, na_values, keep_default_na, na_filter, verbose, skip_blank_lines, parse_dates, infer_datetime_format, keep_date_col, date_parser, dayfirst, cache_dates, iterator, chunksize, compression, thousands, decimal, lineterminator, quotechar, quoting, doublequote, escapechar, comment, encoding, dialect, error_bad_lines, warn_bad_lines, delim_whitespace, low_memory, memory_map, float_precision)
+    674         )
+    675 
+--> 676         return _read(filepath_or_buffer, kwds)
+    677 
+    678     parser_f.__name__ = name
+
+~/.local/lib/python3.8/site-packages/pandas/io/parsers.py in _read(filepath_or_buffer, kwds)
+    452 
+    453     try:
+--> 454         data = parser.read(nrows)
+    455     finally:
+    456         parser.close()
+
+~/.local/lib/python3.8/site-packages/pandas/io/parsers.py in read(self, nrows)
+   1131     def read(self, nrows=None):
+   1132         nrows = _validate_integer("nrows", nrows)
+-> 1133         ret = self._engine.read(nrows)
+   1134 
+   1135         # May alter columns / col_dict
+
+~/.local/lib/python3.8/site-packages/pandas/io/parsers.py in read(self, nrows)
+   2035     def read(self, nrows=None):
+   2036         try:
+-> 2037             data = self._reader.read(nrows)
+   2038         except StopIteration:
+   2039             if self._first_chunk:
+
+pandas/_libs/parsers.pyx in pandas._libs.parsers.TextReader.read()
+
+pandas/_libs/parsers.pyx in pandas._libs.parsers.TextReader._read_low_memory()
+
+pandas/_libs/parsers.pyx in pandas._libs.parsers.TextReader._read_rows()
+
+pandas/_libs/parsers.pyx in pandas._libs.parsers.TextReader._tokenize_rows()
+
+pandas/_libs/parsers.pyx in pandas._libs.parsers.raise_parser_error()
+
+ParserError: Error tokenizing data. C error: Expected 1 fields in line 4, saw 33
+
+:end:
+
 ** A evolução favorável da dívida pública
 
 *Dado:* Evolução da dívida bruta e líquida (%PIB)
+
+#+BEGIN_SRC ipython
+fig, ax = plt.subplots(figsize=(8,5))
+
+df = pd.concat([
+    consulta_bc(4536, ["Líquida"]),
+    consulta_bc(13762, ["Bruta"]),
+    ]
+).apply(pd.to_numeric, errors='coerce').resample("MS").last()
+
+
+
+(df/100).plot(ax=ax,
+lw=2.5,
+color=('black','red'),
+ls='-',
+)
+
+ax.axhline(y=0, ls='--', color='gray', lw=1.0)
+
+ax.text(
+0.95, -0.15,
+f'\nAtualizado em {datetime.datetime.now():%Y-%m-%d %H:%M}',
+verticalalignment='bottom', horizontalalignment='right',
+transform=ax.transAxes,
+color='black', fontsize=10)
+
+
+sns.despine()
+plt.show()
+fig.savefig("./figs/Divida_BrutaLiquida.png", transparent = True, dpi = 300)
+#+END_SRC
+
+#+RESULTS:
+:results:
+# Out [41]: 
+# text/plain
+: <Figure size 576x360 with 1 Axes>
+
+# image/png
+[[file:obipy-resources/16b24a9f11b8f145e4f56b550bfdf20a123bf01d/e881f8b9cca723b42b48e20102d76a042d936434.png]]
+:end:
 
 ** Resultado primário do Governo Central
 
@@ -865,7 +964,7 @@ df = pd.concat([
 
 df[["Resultado Primário", "Resultado Nominal"]] = df[["Resultado Primário", "Resultado Nominal"]]*(-1)
 
-(df/100).rolling(12).mean()["1996-01-01":].plot(ax=ax,
+(df/100)["1996-01-01":].plot(ax=ax,
 lw=2.5,
 color=('black','red', 'blue'),
 ls='-',
@@ -888,12 +987,12 @@ fig.savefig("./figs/Resultado_Primario.png", transparent = True, dpi = 300)
 
 #+RESULTS:
 :results:
-# Out [21]: 
+# Out [22]: 
 # text/plain
 : <Figure size 576x360 with 1 Axes>
 
 # image/png
-[[file:obipy-resources/16b24a9f11b8f145e4f56b550bfdf20a123bf01d/a09d5cf1bade84a996cd4c71087e718727282523.png]]
+[[file:obipy-resources/16b24a9f11b8f145e4f56b550bfdf20a123bf01d/b41ce7398e53e3e35b6211fcad9d5e2ccd28c026.png]]
 :end:
 
 #+begin_export latex
@@ -1066,8 +1165,6 @@ fig.savefig("./figs/Selic.png", transparent = True, dpi = 300)
 #+end_export
 
 
-** Preços livres vs Administrados
-
 ** DONE Finalmente, inflação (ops, IPCA)
    CLOSED: [2020-10-23 sex 18:30]
 
@@ -1141,3 +1238,82 @@ fig.savefig("./figs/IPCA.png", transparent = True, dpi = 300)
 \caption*{\textbf{Fonte:} BCB}
 \end{figure}
 #+end_export
+** DONE Preços livres, monitorados, serviços
+   CLOSED: [2020-10-26 seg 20:14]
+
+#+BEGIN_SRC ipython
+df = consulta_bc(13521, ["Meta"])
+df = df.resample('MS').ffill()#.bfill()
+
+df["Teto"] = df["Meta"] + 2.0
+df["Piso"] = df["Meta"] - 2.0
+
+df = pd.concat([
+    df,
+    consulta_bc(433,["IPCA"]),
+    consulta_bc(11428,["Livres"]),
+    consulta_bc(4449,["Monitorados"]),
+    consulta_bc(10844,["Serviços"]),
+], axis=1)
+
+df = df["1998-01-01":]
+df = df/100
+df["IPCA"] = (1+ df["IPCA"]).rolling(window=12).agg(lambda x : x.prod()) -1
+df["Livres"] = (1+ df["Livres"]).rolling(window=12).agg(lambda x : x.prod()) -1
+df["Monitorados"] = (1+ df["Monitorados"]).rolling(window=12).agg(lambda x : x.prod()) -1
+df["Serviços"] = (1+ df["Serviços"]).rolling(window=12).agg(lambda x : x.prod()) -1
+fig, ax = plt.subplots(figsize=(8,5))
+
+df[["Livres", "Monitorados", "Serviços", "IPCA"]].plot(ax=ax,
+lw=2,
+ls='-',
+color = ('blue','red','green', 'black'),                  
+)
+
+ax.text(
+0.95, -0.15,
+f'\nAtualizado em {datetime.datetime.now():%Y-%m-%d %H:%M}',
+verticalalignment='bottom', horizontalalignment='right',
+transform=ax.transAxes,
+color='black', fontsize=10)
+
+ax.pcolorfast(ax.get_xlim(), ax.get_ylim(),
+              (df['IPCA'] > df["Teto"]).values[np.newaxis],
+              cmap='Blues', alpha=0.3, label="Acima do Teto",
+              zorder=-1,
+)
+
+ax.pcolorfast(ax.get_xlim(), ax.get_ylim(),
+              (df['IPCA'] < df["Piso"]).values[np.newaxis],
+              cmap='Reds', alpha=0.3, label="Abaixo do Piso",
+              zorder=-1,
+)
+
+ax.legend()
+
+sns.despine()
+plt.show()
+fig.savefig("./figs/Livres_Administrados.png", transparent = True, dpi = 300)
+#+END_SRC
+
+#+RESULTS:
+:results:
+# Out [28]: 
+# text/plain
+: <Figure size 576x360 with 1 Axes>
+
+# image/png
+[[file:obipy-resources/16b24a9f11b8f145e4f56b550bfdf20a123bf01d/3c04b1dc8d26541c7285d0baa45b21cdfc2ab648.png]]
+:end:
+
+#+begin_export latex
+\begin{figure}[htb]
+\centering
+\caption{IPCA e seus componentes: preços livres, monitorados e serviços} 
+\includegraphics[width = 0.65\textwidth]{./figs/Livres_Administrados.png}
+\label{fig:livres_adm}
+\caption*{\textbf{Fonte:} BCB}
+\end{figure}
+#+end_export
+
+
